[tool.poetry]
name = "eov-github-v0.1"
version = "0.1.0"
description = ""
authors = ["Yizhou Yang <yang.yizhou@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.11.0"
numpy = "^1.22.3"
stable-baselines3 = "^1.5.0"
mpi4py = "^3.1.3"
tensorboardX = "^2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
